# EolasKMS

./: .dockerignore  .gitattributes  .gitignore  README.md  build.gradle.kts  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  gradle.properties  settings.gradle.kts
.gemma-eval/: C_fog_keywords.json  C_ngo_keywords.json  D_fog_classification.json  D_ngo_classification.json  _body.json
.github/: dependabot.yml
docs/: authority-matrix.md  backup-restore.md  bulk-import.md  competitive-comparison.md  environment-reference.md  hallucination-audit-2026-05-08.md  hallucination-mitigation-plan-2026-05-08.md  monitoring-setup.md  upgrade-runbook.md
kosha-ai-sidecar/: Dockerfile  pyproject.toml
kosha-ai-sidecar/src/: config.py  main.py
kosha-ai-sidecar/src/handlers/: feedback_handler.py  task_handler.py
kosha-ai-sidecar/src/models/: messages.py
kosha-ai-sidecar/src/pipelines/: classifier.py  keyword_extractor.py  metadata_extractor.py  ocr.py  summarizer.py  taxonomy_pipeline.py
kosha-ai-sidecar/src/providers/: llm_provider.py
kosha-app/: Dockerfile  build.gradle.kts
kosha-audit/: build.gradle.kts
kosha-common/: build.gradle.kts
kosha-document/: build.gradle.kts
kosha-identity/: build.gradle.kts
kosha-import/: build.gradle.kts
kosha-notification/: build.gradle.kts
kosha-preview-sidecar/: Dockerfile
kosha-reporting/: build.gradle.kts
kosha-retention/: build.gradle.kts
kosha-search/: build.gradle.kts
kosha-storage/: build.gradle.kts
kosha-taxonomy/: build.gradle.kts
kosha-web/: Dockerfile  README.md  components.json  (+4 more)
(+299 files in other folders)
